# rust-api

./: .env  .gitignore  Cargo.toml  README.md  package-lock.json  package.json
.github/workflows/: test_ta.yml
src/: agrega.rs  const.rs  controllers.rs  helpers.rs  lib.rs  main.rs  middle.rs  models.rs  repositories.rs  routes.rs
src-tauri/: tauri.conf.json
src/agrega/: agregate.rs
src/algorithms/: fibonnacci.rs
src/controllers/: book_controller.rs  customer_controller.rs  file_controller.rs
src/errors/: errors.rs
src/helpers/: calcs.rs  helpers.rs  types.rs
src/models/: book_models.rs  customer_model.rs
src/repositories/: book_repository.rs  customer_repository.rs
src/routes/: book_routes.rs  customer_routes.rs  route.rs
