[package]
name = "rest_api"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
actix-web = "4"
serde = {version = "1.0.197" , features = ["derive"]}
serde_json = "1.0.115"
sqlx = { version = "0.6.2", features = ["runtime-async-std-native-tls", "postgres", "chrono", "uuid"] }
dotenv = "0.15.0"
