[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = {version = "0.7.5", features = ["macros" , "multipart"]}
axum-macros = "0.4.1"
future-utils = "0.12.1"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
tower = "0.4.13"
tower-http = { version = "0.5.0", features = ["full"] }
sqlx = { version = "0.7", features = [ "runtime-tokio-native-tls" , "postgres" ,  "macros" , "chrono"] }
jwt = "0.15.0"
anyhow = "1.0.48"
dotenvy = "0.15.7"
cargo-watch = "8.5.2"
